--- a/client/src/Style/Detail.module.css
+++ b/client/src/Style/Detail.module.css
@@ -18,6 +18,7 @@
 
 .author {
     display: flex;
+    padding-top: 10px;
 }
 
 .authorName {
@@ -28,6 +29,7 @@
 .date {
     font-size: small;
     color: gray;
+    padding-top: 10px;
 }
 
 .content {
@@ -54,6 +56,7 @@
     margin-left: auto;
     margin-right: auto;
     text-align: right;
+    padding-top: 20px;
 }
 
 .edit {
